--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="title" content="METS IEDC">
+<meta name="description" content="Official website of METS IEDC - Innovation, Entrepreneurship and Projects.">
+<meta name="keywords" content="METS, METS IEDC, Engineering, IEDC Kerala, Student Startup, METS College">
+<meta name="robots" content="index, follow">
+<meta name="author" content="IEDC METS">
+<link rel="canonical" href="https://mohdzaayi.github.io/metsiedc/">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MET'S IEDC</title>
