--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div>
                     <div class="grid md:grid-cols-2 gap-8 items-center">
                         <div>
-                            <img src="EXCOM 2025.jpg" alt="IEDC Team" class="rounded-lg shadow-lg">
+                            <img src="excom 2k25.jpg" alt="IEDC Team" class="rounded-lg shadow-lg">
                         </div>
                         <div>
                             <p class="text-lg text-secondary mb-4">The Innovation and Entrepreneurship Development Centre (IEDC) at Met's School of Engineering is a flagship initiative of Kerala Startup Mission (KSUM) to promote innovation and entrepreneurship among students and faculty.</p>
