--- a/index.html
+++ b/index.html
@@ -249,21 +249,21 @@
                     <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
                         <div class="bg-light p-6 rounded-lg shadow-lg text-center card-hover transition-all duration-300">
                             <img src="https://placehold.co/150x150/007BFF/FFFFFF?text=Faculty+Lead" alt="Team Member" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-primary">
-                            <h3 class="text-xl font-semibold text-primary">Mr.Jerin George K</h3>
+                            <h3 class="text-xl font-semibold text-primary">Mrs.Rekha</h3>
                             <p class="text-secondary">IEDC Nodal Officer</p>
                             <p class="text-sm text-dark mt-2">"Guiding students to unlock their innovative potential."</p>
                         </div>
                         <div class="bg-light p-6 rounded-lg shadow-lg text-center card-hover transition-all duration-300">
-                            <img src="https://placehold.co/150x150/28A745/FFFFFF?text=Student+CEO" alt="Team Member" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-accent">
+                            <img src="CHRISS.jpg" alt="Team Member" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-accent">
                             <h3 class="text-xl font-semibold text-primary">Chris Babu</h3>
                             <p class="text-secondary">IEDC Student Lead I</p>
                             <p class="text-sm text-dark mt-2">"Passionate about building a vibrant startup ecosystem on campus."</p>
                         </div>
                         <div class="bg-light p-6 rounded-lg shadow-lg text-center card-hover transition-all duration-300">
                             <img src="https://placehold.co/150x150/FFC107/333333?text=Ex-Com+Member" alt="Team Member" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-yellow-500">
-                            <h3 class="text-xl font-semibold text-primary">Your Name (Ex-Com)</h3>
-                            <p class="text-secondary">Former Executive Committee</p>
-                            <p class="text-sm text-dark mt-2">"Proud to have contributed to the IEDC's growth."</p>
+                            <h3 class="text-xl font-semibold text-primary">Deena Abbas</h3>
+                            <p class="text-secondary">Student Lead II</p>
+                            <p class="text-sm text-dark mt-2">"Passionate about building a vibrant startup ecosystem on campus."</p>
                         </div>
                         </div>
                 </div>
@@ -512,7 +512,7 @@
                                     <div>
                                         <h3 class="text-lg font-medium text-dark">Call Us</h3>
                                         <p class="text-secondary">Office: +91 7306226875</p>
-                                        <p class="text-secondary">Nodal Officer: +91 [Nodal Officer Phone]</p>
+                                        <p class="text-secondary">Nodal Officer: +91 9947273434</p>
                                     </div>
                                 </div>
                              </div>
@@ -526,83 +526,6 @@
                     </div>
                 </div>
             </div>
-        </section>
-
-        <section id="student-login" class="page py-16 md:py-24 bg-gradient-to-br from-accent to-green-700 flex items-center justify-center min-h-screen">
-            <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="max-w-md mx-auto bg-white p-8 sm:p-10 rounded-xl shadow-2xl">
-                    <div class="text-center mb-8">
-                        <svg class="h-16 w-16 text-accent rounded-full mx-auto mb-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>
-                        <h1 class="text-2xl sm:text-3xl font-bold text-accent">Student Portal</h1>
-                        <p class="text-secondary mt-2">Access IEDC Resources & Profile</p>
-                    </div>
-                    <form action="#" method="POST"> <div class="mb-6">
-                            <label for="student-id" class="block text-sm font-medium text-secondary mb-1">Student ID / Email</label>
-                            <input type="text" name="student-id" id="student-id" required class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-accent focus:border-transparent sm:text-sm" placeholder="yourid@example.com">
-                        </div>
-                        <div class="mb-6">
-                            <label for="student-password" class="block text-sm font-medium text-secondary mb-1">Password</label>
-                            <input type="password" name="student-password" id="student-password" required class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-accent focus:border-transparent sm:text-sm" placeholder="••••••••">
-                        </div>
-                        <div class="flex items-center justify-between mb-6">
-                            <div class="flex items-center">
-                                <input id="student-remember-me" name="student-remember-me" type="checkbox" class="h-4 w-4 text-accent focus:ring-green-400 border-gray-300 rounded">
-                                <label for="student-remember-me" class="ml-2 block text-sm text-secondary">Remember me</label>
-                            </div>
-                            <div class="text-sm">
-                                <a href="#" class="font-medium text-accent hover:text-green-700">Forgot password?</a>
-                            </div>
-                        </div>
-                        <div>
-                            <button type="submit" class="w-full bg-accent text-white py-3 px-6 rounded-lg hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-accent transition duration-300 font-semibold text-lg">Sign In</button>
-                        </div>
-                        <p class="mt-6 text-center text-sm text-secondary">
-                            Don't have an account? <a href="#" class="font-medium text-accent hover:text-green-700">Register here</a>
-                        </p>
-                         <p class="mt-8 text-center text-xs text-secondary">
-                            This is a visual representation. Actual login and registration require backend implementation.
-                        </p>
-                    </form>
-                </div>
-            </div>
-        </section>
-
-        <section id="admin-login" class="page py-16 md:py-24 bg-gradient-to-br from-primary to-blue-700 flex items-center justify-center min-h-screen">
-            <div class="container mx-auto px-4 sm:px-6 lg:px-8">
-                <div class="max-w-md mx-auto bg-white p-8 sm:p-10 rounded-xl shadow-2xl">
-                    <div class="text-center mb-8">
-                        <img src="https://placehold.co/80x80/007BFF/FFFFFF?text=IEDC" alt="IEDC Logo" class="h-16 w-16 rounded-full mx-auto mb-4">
-                        <h1 class="text-2xl sm:text-3xl font-bold text-primary">Admin Portal</h1>
-                        <p class="text-secondary mt-2">IEDC Management Access</p>
-                    </div>
-                    <form action="#" method="POST"> <div class="mb-6">
-                            <label for="admin-username" class="block text-sm font-medium text-secondary mb-1">Username / Email</label>
-                            <input type="text" name="admin-username" id="admin-username" required class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent sm:text-sm" placeholder="admin@iedc.com">
-                        </div>
-                        <div class="mb-6">
-                            <label for="admin-password" class="block text-sm font-medium text-secondary mb-1">Password</label>
-                            <input type="password" name="admin-password" id="admin-password" required class="mt-1 block w-full px-4 py-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-primary focus:border-transparent sm:text-sm" placeholder="••••••••">
-                        </div>
-                        <div class="flex items-center justify-between mb-6">
-                            <div class="flex items-center">
-                                <input id="admin-remember-me" name="admin-remember-me" type="checkbox" class="h-4 w-4 text-primary focus:ring-blue-400 border-gray-300 rounded">
-                                <label for="admin-remember-me" class="ml-2 block text-sm text-secondary">Remember me</label>
-                            </div>
-                            <div class="text-sm">
-                                <a href="#" class="font-medium text-primary hover:text-blue-700">Forgot password?</a>
-                            </div>
-                        </div>
-                        <div>
-                            <button type="submit" class="w-full bg-primary text-white py-3 px-6 rounded-lg hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary transition duration-300 font-semibold text-lg">Sign In</button>
-                        </div>
-                    </form>
-                    <p class="mt-8 text-center text-sm text-secondary">
-                        This is a visual representation. Actual login requires backend implementation.
-                    </p>
-                </div>
-            </div>
-        </section>
-
     </main>
 
     <footer class="bg-dark text-light py-12">
