--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <a href="#news" class="nav-link page-link">News</a>
                     <a href="#contact" class="nav-link page-link">Contact</a>
                     <a href="student login.html" class="px-4 py-2 bg-accent text-white rounded-lg hover:bg-green-700 transition duration-300 page-link">Student Login</a>
-                    <a href="#admin-login" class="px-4 py-2 bg-primary text-white rounded-lg hover:bg-blue-700 transition duration-300 page-link">Admin Login</a>
+                    <a href="admin_login.html" class="px-4 py-2 bg-primary text-white rounded-lg hover:bg-blue-700 transition duration-300 page-link">Admin Login</a>
                 </nav>
 
                 <div class="md:hidden">
@@ -117,7 +117,7 @@
                 <a href="#news" class="block px-3 py-2 rounded-md text-base font-medium text-dark hover:bg-gray-100 page-link-mobile">News</a>
                 <a href="#contact" class="block px-3 py-2 rounded-md text-base font-medium text-dark hover:bg-gray-100 page-link-mobile">Contact</a>
                 <a href="student login.html" class="mt-4 block w-full text-center px-4 py-2 bg-accent text-white rounded-lg hover:bg-green-700 transition duration-300 page-link-mobile">Student Login</a>
-                <a href="#admin-login" class="mt-2 block w-full text-center px-4 py-2 bg-primary text-white rounded-lg hover:bg-blue-700 transition duration-300 page-link-mobile">Admin Login</a>
+                <a href="admin_login.html" class="mt-2 block w-full text-center px-4 py-2 bg-primary text-white rounded-lg hover:bg-blue-700 transition duration-300 page-link-mobile">Admin Login</a>
             </nav>
         </div>
     </header>
